provisioning/apps/overlays/k3d-dev/game-2048/ingress-k3d.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-2048-k3d-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: keycloak-operator-traefik-forward-auth@kubernetescrd

spec:
  ingressClassName: traefik
  rules:
  - host: game-2048.k3d-dev.lessingstrasse.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-2048
            port:
              number: 80

  tls:
  - hosts:
    - game-2048.k3d-dev.lessingstrasse.org
    secretName: game-2048.k3d-dev.lessingstrasse.org
